# google-satellite-embeddings-python

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: README.md
examples/: README.md  google-embeddings.ipynb
src/google_satellite_embeddings/: __init__.py  change_detection.py  clustering.py  utils.py
